--- a/templates/topic/detail.html
+++ b/templates/topic/detail.html
@@ -73,7 +73,7 @@
                     </a>
                     <a class="reply_time">
                         {{ loop.index }}楼 / {{ loop.length }}楼 •
-                        <span class="gua-time" id="{{ r.ct }}">{{ r.ct }}</span>
+                        <span class="gua-time" id="{{ r.ct }}"></span>
                     </a>
                 </div>
                 <div class='user_action'>
