--- a/templates/board/new.html
+++ b/templates/board/new.html
@@ -18,21 +18,23 @@
         <div id="content">
             <div class="panel">
                 <div class="inner post">
-<form id="create_topic_form" method="post" action="{{ url_for('.add', token=token) }}">
+<form id="create_topic_form" method="post" action="{{ url_for('.add') }}">
     <fieldset>
-        <textarea autofocus class='span9' id='title'
-                  name='title' rows='1'
-                  placeholder="标题字数 10 字以上"></textarea>
-        <select name="select_board">
-            {% for board in boards %}
-            <option value="{{ board.id }}">{{ board.board_name }}</option>
-            {% endfor %}
-        </select>
+        <input type="text" name="board_name">
+        <input type="submit" class='span-primary submit_btn' data-loading-text="提交中" value="提交">
+        <!--<textarea autofocus class='span9' id='title'-->
+                  <!--name='board_name' rows='1'-->
+                  <!--placeholder="标题字数 10 字以上"></textarea>-->
+        <!--<select name="board">-->
+            <!--{% for board in boards %}-->
+            <!--<option value={{ board.id }}>{{ board.name }}</option>-->
+            <!--{% endfor %}-->
+        <!--</select>-->
         <div class='markdown_editor in_editor'>
           <div class='markdown_in_editor'>
-            <textarea class='editor' name='content' rows='20' placeholder='文章支持 Markdown 语法, 请注意标记代码'></textarea>
+            <!--<textarea class='editor' name='content' rows='20' placeholder='文章支持 Markdown 语法, 请注意标记代码'></textarea>-->
             <div class='editor_buttons'>
-              <input type="submit" class='span-primary submit_btn' data-loading-text="提交中" value="提交">
+              <!--<input type="submit" class='span-primary submit_btn' data-loading-text="提交中" value="提交">-->
             </div>
           </div>
         </div>
