add board mongo

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,8 +12,12 @@
     <div>
         {{ user.name }}
     </div>
-    <div>
-        {{ user.password }}
-    </div>
+
+    <h1>上传文件</h1>
+    <form method="post" action="{{ url_for('index.add_img') }}"
+        enctype="multipart/form-data">
+    <input type="file" name="file">
+    <input type="submit" name="upload">
+    </form>
 </body>
 </html>
