--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>bbs club</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
-<h1>HOME</h1>
+<!--<h1>HOME</h1>-->
 <body>
     <form class="form-horizontal" method="post" action="{{ url_for('.register') }}">
         <div class="control-group">
