--- a/templates/topic/new.html
+++ b/templates/topic/new.html
@@ -23,9 +23,14 @@
         <textarea autofocus class='span9' id='title'
                   name='title' rows='1'
                   placeholder="标题字数 10 字以上"></textarea>
-        <select name="select_board">
+        <select name="board_id">
+
             {% for board in boards %}
+            {% if board.id == 1 %}
+            <option value="{{ board.id }}" selected = "selected">{{ board.board_name }}</option>
+            {% else %}
             <option value="{{ board.id }}">{{ board.board_name }}</option>
+            {% endif %}
             {% endfor %}
         </select>
         <div class='markdown_editor in_editor'>
