--- a/templates/topic/detail.html
+++ b/templates/topic/detail.html
@@ -1,67 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>bbs club</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/lib/editor/editor.css">
-    <link rel="stylesheet" href="/static/lib/webuploader/webuploader.css">
-    <script src="/static/lib/jquery-3.0.0.min.js"></script>
-    <script src="/static/lib/markdownit.js"></script>
-    <script src="/static/lib/webuploader/webuploader.withoutimage.js"></script>
-    <script src="/static/lib/editor/editor.js"></script>
-    <script src="/static/lib/editor/ext.js"></script>
-    <script src="//cdn.bootcss.com/marked/0.3.6/marked.min.js"></script>
-    <script src="/static/lib/moment.js"></script>
-</head>
-<body>
+{% extends "base.html" %}
 
-<div id="main">
-
-
-    <div id="sidebar">
-            <div class="panel">
-                <div class="inner">
-                    <a href="/topic" class="create_topic_btn">
-                        <span class="span-success">回到首页</span>
+{% block sidebar %}
+<div id="sidebar">
+    <div class='panel'>
+        <div class='header'>
+            <span class='col_fade'>作者</span>
+        </div>
+        <div class='inner'>
+            <div class='user_card'>
+                <div>
+                    <a class='user_avatar' href="/user/{{ topic.user_id }}"><img src="/upload/{{ topic.user().filename }}"/>
                     </a>
+                    <span class='user_name'>
+                        <a class='dark' href="/user/{{ topic.user_id }}">
+                            {{ topic.user().username }}
+                        </a>
+                    </span>
+                    <div class="space clearfix"></div>
+                    <span class="signature">
+                        "Fusce posuere felis sed lacus"
+                    </span>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+{% endblock %}
 
-
-    <div id="content">
-        <div class='panel'>
-            <div class='header topic_header'>
-        <span class="topic_full_title">
-			{{ topic.title }}
-      	</span>
-                <div class="changes">
-            <span>
-                <!--时间的格式转换-->
-                更新于 {{ topic.localtime(topic.updated_time) }}
+{% block content %}
+<div id="content">
+    <div class='panel'>
+        <div class='header topic_header'>
+            <span class="topic_full_title">
+                {{ topic.title }}
             </span>
-            <span>
-                {% set u = topic.user() %}
-                作者
-                <a href="{{ url_for('index.user_detail', id=u.id) }}">
-                    {{ u.username }}
-                </a>
-        	</span>
-            <span>
-          	    {{ topic.views }} 次浏览
-        	</span>
-            <span>
-                来自 问答
-            </span>
+            <div class="changes">
+                <span>
+                    <!--时间的格式转换-->
+                    更新于 {{ topic.localtime(topic.updated_time) }}
+                </span>
+                <span>
+                    {% set u = topic.user() %}
+                    作者
+                    <a href="{{ url_for('index.user_detail', id=u.id) }}">
+                        {{ u.username }}
+                    </a>
+                </span>
+                <span>
+                    {{ topic.views }} 次浏览
+                </span>
+                <span>
+                    来自 {{ topic.board().board_name }}
+                </span>
             </div>
-            </div>
-
-            <div class='inner topic'>
-                <div class='topic_content'>
-                    <div class="markdown-text">{{ topic.content }}</div>
-                </div>
+        </div>
+        <div class='inner topic'>
+            <div class='topic_content'>
+                <div class="markdown-text">{{ topic.content }}</div>
             </div>
         </div>
     </div>
@@ -86,7 +81,7 @@
                         {{ u.username }}
                     </a>
                     <a class="reply_time">
-                        {{ loop.index }}楼 / {{ loop.length }}楼 •
+                        {{ loop.index }}楼 / {{ loop.length }} •
                         <span class="gua-time" id="{{ r.created_time }}"></span>
                     </a>
                 </div>
@@ -113,57 +108,8 @@
             </form>
         </div>
     </div>
-    <script>
-        var e = function(sel) {
-            return document.querySelector(sel)
-        }
+</div>
+{% endblock %}
 
-        var es = function(sel) {
-            return document.querySelectorAll(sel)
-        }
 
-        var markContents = function() {
-            var contentDivs = es('.markdown-text')
-            for(var i = 0; i < contentDivs.length; i++) {
-                var contentDiv = contentDivs[i]
-                var content = marked(contentDiv.innerHTML)
-                // console.log(content, contentDiv.innerHTML)
-                contentDiv.innerHTML = content
-            }
-        }
-
-        var registerTimer = function() {
-            setInterval(function(){
-                var times = es('.gua-time')
-                for(var i = 0; i < times.length; i++) {
-                    var t = times[i]
-                    var time = Number(t.id) * 1000
-                    var now = moment().valueOf()
-                    var delta = now - time
-                    if(delta<60000){
-                        var s = Math.floor(delta/1000) + '秒前'
-                    }
-                    else if(delta<3600000){
-                        var s = Math.floor(delta/60000) + '分钟前'
-                    }
-                    else if (delta<86400000){
-                        var s = Math.floor(delta/3600000) + '小时前'
-                    }
-                    else{
-                        var s = moment(time).format('YYYY-MM-DD HH:mm:ss')  //moment.js
-                    }
-                    t.innerHTML = s
-                }
-            }, 1000)
-        }
-
-        var __main = function() {
-            markContents()
-            registerTimer()
-        }
-
-        __main()
-    </script>
-</body>
-</html>
 
