--- a/templates/topic/new.html
+++ b/templates/topic/new.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>bbs club</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/lib/editor/editor.css">
-    <link rel="stylesheet" href="/static/lib/webuploader/webuploader.css">
-    <script src="/static/lib/jquery-3.0.0.min.js"></script>
-    <script src="/static/lib/markdownit.js"></script>
-    <script src="/static/lib/webuploader/webuploader.withoutimage.js"></script>
-    <script src="/static/lib/editor/editor.js"></script>
-    <script src="/static/lib/editor/ext.js"></script>
-</head>
-<body>
-    <div id="main">
+{% extends "base.html" %}
+
+{% block sidebar %}
+{% endblock %}
+
+{% block content %}
         <div id="content">
             <div class="panel">
                 <div class="inner post">
@@ -46,12 +35,4 @@
                 </div>
             </div>
         </div>
-    </div>
-<script>
-  (function () {
-    var editor = new Editor();
-    editor.render($('.editor')[0]);
-  })();
-</script>
-</body>
-</html>
+{% endblock %}
